{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 42,
  "lineage": "442e71a4-9f83-6905-5321-86134bcd813d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-000e0eccc11c89286",
            "arn": "arn:aws:ec2:ap-south-1:947348456816:elastic-ip/eipalloc-000e0eccc11c89286",
            "association_id": "eipassoc-0cf8e115be60020e7",
            "domain": "vpc",
            "id": "eipalloc-000e0eccc11c89286",
            "instance": "i-0aabf7d76bb19339f",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-039ce0d709f2f4152",
            "private_dns": "ip-11-0-101-99.ap-south-1.compute.internal",
            "private_ip": "11.0.101.99",
            "public_dns": "ec2-13-200-116-8.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.200.116.8",
            "public_ipv4_pool": "amazon",
            "tags": {
              "environment": "sandbox",
              "owners": "pas"
            },
            "tags_all": {
              "environment": "sandbox",
              "owners": "pas"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_availability_zones.available",
            "module.ec2_public.aws_iam_instance_profile.this",
            "module.ec2_public.aws_iam_role.this",
            "module.ec2_public.aws_iam_role_policy_attachment.this",
            "module.ec2_public.aws_instance.ignore_ami",
            "module.ec2_public.aws_instance.this",
            "module.ec2_public.aws_spot_instance_request.this",
            "module.ec2_public.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_public.data.aws_partition.current",
            "module.ec2_public.data.aws_ssm_parameter.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e1b8bd9daef6633a",
            "arn": "arn:aws:ec2:ap-south-1:947348456816:instance/i-0aabf7d76bb19339f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aabf7d76bb19339f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "prizm-pas",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-039ce0d709f2f4152",
            "private_dns": "ip-11-0-101-99.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.101.99",
            "public_dns": "ec2-13-235-0-221.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.0.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06c0c4119fda0aff4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ecb151d889ac451",
            "tags": {
              "Name": "pas-sandbox-BastionHost",
              "environment": "sandbox",
              "owners": "pas"
            },
            "tags_all": {
              "Name": "pas-sandbox-BastionHost",
              "environment": "sandbox",
              "owners": "pas"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "pas-sandbox-BastionHost"
            },
            "vpc_security_group_ids": [
              "sg-0e6dbcba53f7d24cb"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_availability_zones.available",
            "module.ec2_public.aws_iam_instance_profile.this",
            "module.ec2_public.aws_iam_role.this",
            "module.ec2_public.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_public.data.aws_partition.current",
            "module.ec2_public.data.aws_ssm_parameter.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:947348456816:security-group/sg-0e6dbcba53f7d24cb",
            "description": "Security Group with SSH port open for everybody (IPv4 CIDR), egress ports are all world open",
            "egress": [],
            "id": "sg-0e6dbcba53f7d24cb",
            "ingress": [],
            "name": "pas-sandbox-public-bastion-sg-20250410071035433500000008",
            "name_prefix": "pas-sandbox-public-bastion-sg-",
            "owner_id": "947348456816",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pas-sandbox-public-bastion-sg",
              "environment": "sandbox",
              "owners": "pas"
            },
            "tags_all": {
              "Name": "pas-sandbox-public-bastion-sg",
              "environment": "sandbox",
              "owners": "pas"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0e72427794de0ad3b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-3876765868",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e6dbcba53f7d24cb",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-580309055",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e6dbcba53f7d24cb",
            "security_group_rule_id": "sgr-0fde8941926fbfa22",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:947348456816:network-acl/acl-0e4d9b62a27e0360f",
            "default_network_acl_id": "acl-0e4d9b62a27e0360f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e4d9b62a27e0360f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "947348456816",
            "subnet_ids": [
              "subnet-009b1f10eb107b201",
              "subnet-0915f2b1c179bfe2e",
              "subnet-09ecb151d889ac451",
              "subnet-0a045b342b70415c1",
              "subnet-0c36a4870d2f3b767",
              "subnet-0f30fc5feea4c0d20"
            ],
            "tags": {
              "Name": "pas-sandbox-prizm-pas-default",
              "environment": "sandbox",
              "owners": "pas"
            },
            "tags_all": {
              "Name": "pas-sandbox-prizm-pas-default",
              "environment": "sandbox",
              "owners": "pas"
            },
            "vpc_id": "vpc-0e72427794de0ad3b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:947348456816:route-table/rtb-089b09a73c298e534",
            "default_route_table_id": "rtb-089b09a73c298e534",
            "id": "rtb-089b09a73c298e534",
            "owner_id": "947348456816",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "pas-sandbox-prizm-pas-default",
              "environment": "sandbox",
              "owners": "pas"
            },
            "tags_all": {
              "Name": "pas-sandbox-prizm-pas-default",
              "environment": "sandbox",
              "owners": "pas"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0e72427794de0ad3b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:947348456816:security-group/sg-0f570b8f0c9135a07",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f570b8f0c9135a07",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "947348456816",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pas-sandbox-prizm-pas-default",
              "environment": "sandbox",
              "owners": "pas"
            },
            "tags_all": {
              "Name": "pas-sandbox-prizm-pas-default",
              "environment": "sandbox",
              "owners": "pas"
            },
            "vpc_id": "vpc-0e72427794de0ad3b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-074541776ba48c032",
            "arn": "arn:aws:ec2:ap-south-1:947348456816:elastic-ip/eipalloc-074541776ba48c032",
            "domain": "vpc",
            "id": "eipalloc-074541776ba48c032",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-206-49-192.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.49.192",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "pas-sandbox-prizm-pas-ap-south-1a",
              "environment": "sandbox",
              "owners": "pas"
            },
            "tags_all": {
              "Name": "pas-sandbox-prizm-pas-ap-south-1a",
              "environment": "sandbox",
              "owners": "pas"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:947348456816:internet-gateway/igw-02b2546a827c91476",
            "id": "igw-02b2546a827c91476",
            "owner_id": "947348456816",
            "tags": {
              "Name": "pas-sandbox-prizm-pas",
              "environment": "sandbox",
              "owners": "pas"
            },
            "tags_all": {
              "Name": "pas-sandbox-prizm-pas",
              "environment": "sandbox",
              "owners": "pas"
            },
            "vpc_id": "vpc-0e72427794de0ad3b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-074541776ba48c032",
            "association_id": "eipassoc-0ec15ac0b37a177c1",
            "connectivity_type": "public",
            "id": "nat-0884ea56c62ac51d8",
            "network_interface_id": "eni-08c7338abc5d2bd86",
            "private_ip": "11.0.101.34",
            "public_ip": "15.206.49.192",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09ecb151d889ac451",
            "tags": {
              "Name": "pas-sandbox-prizm-pas-ap-south-1a",
              "environment": "sandbox",
              "owners": "pas"
            },
            "tags_all": {
              "Name": "pas-sandbox-prizm-pas-ap-south-1a",
              "environment": "sandbox",
              "owners": "pas"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-036fe634bc0652d111080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0884ea56c62ac51d8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-036fe634bc0652d11",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02b2546a827c91476",
            "id": "r-rtb-01eb84123872b80f41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01eb84123872b80f4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:947348456816:route-table/rtb-0ff7f95e47fabf22c",
            "id": "rtb-0ff7f95e47fabf22c",
            "owner_id": "947348456816",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pas-sandbox-prizm-pas-db",
              "environment": "sandbox",
              "owners": "pas"
            },
            "tags_all": {
              "Name": "pas-sandbox-prizm-pas-db",
              "environment": "sandbox",
              "owners": "pas"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e72427794de0ad3b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:947348456816:route-table/rtb-036fe634bc0652d11",
            "id": "rtb-036fe634bc0652d11",
            "owner_id": "947348456816",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pas-sandbox-prizm-pas-private",
              "environment": "sandbox",
              "owners": "pas"
            },
            "tags_all": {
              "Name": "pas-sandbox-prizm-pas-private",
              "environment": "sandbox",
              "owners": "pas"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e72427794de0ad3b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:947348456816:route-table/rtb-01eb84123872b80f4",
            "id": "rtb-01eb84123872b80f4",
            "owner_id": "947348456816",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pas-sandbox-prizm-pas-public",
              "environment": "sandbox",
              "owners": "pas"
            },
            "tags_all": {
              "Name": "pas-sandbox-prizm-pas-public",
              "environment": "sandbox",
              "owners": "pas"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e72427794de0ad3b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07339b51c45dbcdb6",
            "route_table_id": "rtb-0ff7f95e47fabf22c",
            "subnet_id": "subnet-0c36a4870d2f3b767"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6d07c66e9d980d2",
            "route_table_id": "rtb-0ff7f95e47fabf22c",
            "subnet_id": "subnet-009b1f10eb107b201"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0141811a66db93ac1",
            "route_table_id": "rtb-036fe634bc0652d11",
            "subnet_id": "subnet-0a045b342b70415c1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c88db02334c8ea6a",
            "route_table_id": "rtb-036fe634bc0652d11",
            "subnet_id": "subnet-0915f2b1c179bfe2e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6e6b26759b50492",
            "route_table_id": "rtb-01eb84123872b80f4",
            "subnet_id": "subnet-09ecb151d889ac451"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a11217849bd070b",
            "route_table_id": "rtb-01eb84123872b80f4",
            "subnet_id": "subnet-0f30fc5feea4c0d20"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:947348456816:subnet/subnet-0c36a4870d2f3b767",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "11.0.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c36a4870d2f3b767",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "947348456816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pas-sandbox-prizm-pas-db-ap-south-1a",
              "Type": "Private Database Subnets",
              "environment": "sandbox",
              "owners": "pas"
            },
            "tags_all": {
              "Name": "pas-sandbox-prizm-pas-db-ap-south-1a",
              "Type": "Private Database Subnets",
              "environment": "sandbox",
              "owners": "pas"
            },
            "vpc_id": "vpc-0e72427794de0ad3b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:947348456816:subnet/subnet-009b1f10eb107b201",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "11.0.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009b1f10eb107b201",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "947348456816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pas-sandbox-prizm-pas-db-ap-south-1b",
              "Type": "Private Database Subnets",
              "environment": "sandbox",
              "owners": "pas"
            },
            "tags_all": {
              "Name": "pas-sandbox-prizm-pas-db-ap-south-1b",
              "Type": "Private Database Subnets",
              "environment": "sandbox",
              "owners": "pas"
            },
            "vpc_id": "vpc-0e72427794de0ad3b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:947348456816:subnet/subnet-0a045b342b70415c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a045b342b70415c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "947348456816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pas-sandbox-prizm-pas-private-ap-south-1a",
              "Type": "Private Subnets",
              "environment": "sandbox",
              "kubernetes.io/cluster/pas-sandbox-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "pas"
            },
            "tags_all": {
              "Name": "pas-sandbox-prizm-pas-private-ap-south-1a",
              "Type": "Private Subnets",
              "environment": "sandbox",
              "kubernetes.io/cluster/pas-sandbox-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "pas"
            },
            "vpc_id": "vpc-0e72427794de0ad3b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:947348456816:subnet/subnet-0915f2b1c179bfe2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0915f2b1c179bfe2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "947348456816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pas-sandbox-prizm-pas-private-ap-south-1b",
              "Type": "Private Subnets",
              "environment": "sandbox",
              "kubernetes.io/cluster/pas-sandbox-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "pas"
            },
            "tags_all": {
              "Name": "pas-sandbox-prizm-pas-private-ap-south-1b",
              "Type": "Private Subnets",
              "environment": "sandbox",
              "kubernetes.io/cluster/pas-sandbox-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "pas"
            },
            "vpc_id": "vpc-0e72427794de0ad3b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:947348456816:subnet/subnet-09ecb151d889ac451",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "11.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ecb151d889ac451",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "947348456816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pas-sandbox-prizm-pas-public-ap-south-1a",
              "Type": "Public Subnets",
              "environment": "sandbox",
              "kubernetes.io/cluster/pas-sandbox-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "pas"
            },
            "tags_all": {
              "Name": "pas-sandbox-prizm-pas-public-ap-south-1a",
              "Type": "Public Subnets",
              "environment": "sandbox",
              "kubernetes.io/cluster/pas-sandbox-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "pas"
            },
            "vpc_id": "vpc-0e72427794de0ad3b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:947348456816:subnet/subnet-0f30fc5feea4c0d20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "11.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f30fc5feea4c0d20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "947348456816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pas-sandbox-prizm-pas-public-ap-south-1b",
              "Type": "Public Subnets",
              "environment": "sandbox",
              "kubernetes.io/cluster/pas-sandbox-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "pas"
            },
            "tags_all": {
              "Name": "pas-sandbox-prizm-pas-public-ap-south-1b",
              "Type": "Public Subnets",
              "environment": "sandbox",
              "kubernetes.io/cluster/pas-sandbox-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "pas"
            },
            "vpc_id": "vpc-0e72427794de0ad3b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:947348456816:vpc/vpc-0e72427794de0ad3b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-0e4d9b62a27e0360f",
            "default_route_table_id": "rtb-089b09a73c298e534",
            "default_security_group_id": "sg-0f570b8f0c9135a07",
            "dhcp_options_id": "dopt-034d8d2ceeeb44e69",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e72427794de0ad3b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-089b09a73c298e534",
            "owner_id": "947348456816",
            "tags": {
              "Name": "pas-sandbox-prizm-pas",
              "environment": "sandbox",
              "owners": "pas"
            },
            "tags_all": {
              "Name": "pas-sandbox-prizm-pas",
              "environment": "sandbox",
              "owners": "pas"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}